fix: Add overflow auto to modal background

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -26,6 +26,7 @@
   right: 0;
   bottom: 0;
   background-color: rgba(0, 0, 0, 0.5);
+  overflow: auto;
   z-index: 20;
 }
 
